# quotes-api

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
quotes/: __init__.py  routes.py
tests/: conftest.py  test_quotes.py
