[tool.poetry]
name = "quotes"
version = "0.1.0"
description = ""
authors = ["Maritza Esparza <maritza.esparza@wizeline.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
pytest-flask = "^1.0.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
